[gd_scene load_steps=6 format=2]

[ext_resource path="res://source/GameOverScreen.gd" type="Script" id=1]
[ext_resource path="res://assets/FocusStyle.tres" type="StyleBox" id=2]
[ext_resource path="res://assets/BebasNeue.otf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]

size = 30
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="Animation" id=2]

length = 0.6
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Buttons/MenuButton:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 128 ), Vector2( 0, 28 ), Vector2( 0, 48 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Buttons/PlayAgainButton:rect_position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 88 ), Vector2( 0, 88 ), Vector2( 0, -22 ), Vector2( 0, 0 ) ]
}

[node name="GameOverScreen" type="Control" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 960.0
margin_bottom = 540.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Margin", "Rect" ]
delay = 1.5

[node name="Buttons" type="VBoxContainer" parent="." index="0"]

anchor_left = 0.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -90.0
margin_bottom = -2.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Anchor", "Margin", "Rect" ]
__meta__ = {
"_edit_group_": true
}

[node name="PlayAgainButton" type="Button" parent="Buttons" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 960.0
margin_bottom = 42.0
rect_pivot_offset = Vector2( 0, 0 )
focus_neighbour_top = NodePath("../MenuButton")
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/hover = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_fonts/font = SubResource( 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Play Again"
flat = true
align = 1
_sections_unfolded = [ "Anchor", "Focus", "Margin", "custom_fonts", "custom_styles" ]

[node name="MenuButton" type="Button" parent="Buttons" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 46.0
margin_right = 960.0
margin_bottom = 88.0
rect_pivot_offset = Vector2( 0, 0 )
focus_neighbour_bottom = NodePath("../PlayAgainButton")
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/hover = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_fonts/font = SubResource( 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Back to Main Menu"
flat = true
align = 1
_sections_unfolded = [ "Anchor", "Focus", "Margin", "Rect", "custom_fonts", "custom_styles" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="1"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.1
playback_speed = 1.0
anims/Show = SubResource( 2 )
blend_times = [  ]
autoplay = ""
_sections_unfolded = [ "Playback Options" ]

[connection signal="visibility_changed" from="." to="." method="_hide_if_not_showing"]

[connection signal="pressed" from="Buttons/PlayAgainButton" to="." method="_play_again"]

[connection signal="pressed" from="Buttons/PlayAgainButton" to="." method="hide"]

[connection signal="pressed" from="Buttons/MenuButton" to="." method="_main_menu"]

[connection signal="pressed" from="Buttons/MenuButton" to="." method="hide"]


